showcase section added

--- a/pages/team-page.html
+++ b/pages/team-page.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/assets/css/Team/team-hero.css">
     <link rel="stylesheet" href="/assets/css/Team/team-marquee.css">
     <link rel="stylesheet" href="/assets/css/Team/hire-section.css">
+    <link rel="stylesheet" href="/assets/css/Team/showcase.css">
+    <link rel="stylesheet" href="/assets/css/Team/challenge.css">
 </head>
 
 <body>
@@ -399,20 +401,87 @@
             <section class="hire-section">
                 <div class="hire-main-div">
                     <div class="hire-grid  designer">
-                        <div class="hire-grid-gradient ">
-                            <h6 class="">Hire Designer</h6>
-                        </div>
+                        <h6 class="">Hire Designer</h6>
                     </div>
                     <div class="hire-grid developer ">
-                        <div class="hire-grid-gradient ">
-                            <h6 class="">Hire Designer</h6>
-                        </div>
+                        <h6 class="">Hire Designer</h6>
                     </div>
                     <div class="hire-grid consult">
-                        <div class="hire-grid-gradient ">
-                            <h6 class="">Hire Designer</h6>
+                        <h6 class="">Hire Designer</h6>
+                    </div>
+                </div>
+            </section>
+
+            <section class="task-showcase-section">
+                <div class="main-task-showcase">
+                    <div class="showcase-btn-bar">
+                        <h4 class="">Task Showcase</h4>
+                        <div class="showcase-btn-box">
+                            <button class="showcase-btn">
+                                <img src="/assets/images/left-arrow.png" alt="">
+                            </button>
+                            <button class="showcase-btn">
+                                <img src="/assets/images/right-arrow.png" alt="">
+                            </button>
                         </div>
                     </div>
+
+                    <div class="showcase-slider">
+                        <div class="showcase-slider-box">
+                            <img src="/assets/images/showcase-w.png" alt="">
+                            <div class="slider-box-content">
+                                <div class="">
+                                    <h6>Focal Banner</h6>
+                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                        Viverra suspendisse potenti nullam ac tortor vitae.
+                                    </p>
+                                </div>
+                                <button class="slider-box-btn">
+                                    <p>Explore All Tasks</p>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="showcase-slider-box">
+                            <img src="/assets/images/decorative-office.png" alt="">
+                            <div class="slider-box-content">
+                                <div class="">
+                                    <h6>Focal Banner</h6>
+                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                        Viverra suspendisse potenti nullam ac tortor vitae.
+                                    </p>
+                                </div>
+                                <button class="slider-box-btn">
+                                    <p>Explore All Tasks</p>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="showcase-slider-box">
+                            <img src="/assets/images/showcase-cycle.png" alt="">
+                            <div class="slider-box-content">
+                                <div class="">
+                                    <h6>Focal Banner</h6>
+                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                        Viverra suspendisse potenti nullam ac tortor vitae.
+                                    </p>
+                                </div>
+                                <button class="slider-box-btn">
+                                    <p>Explore All Tasks</p>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- <span class="showcase-gradient-span showcase-right"></span>
+                        <span class="showcase-gradient-span showcase-left"></span> -->
+
+                    </div>
+
+
+
+                </div>
+            </section>
+
+            <section class="challenge-section">
+                <div class="main-challenge-section">
+                    
                 </div>
             </section>
         </main>
