--- a/pages/team-page.html
+++ b/pages/team-page.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/Team/show-case.css">
-    <link rel="stylesheet" href="/assets/css/Team/team-hero.css">
-    <link rel="stylesheet" href="/assets/css/Team/team-marquee.css">
-    <link rel="stylesheet" href="/assets/css/Team/hire-section.css">
-    <link rel="stylesheet" href="/assets/css/Team/showcase.css">
-    <link rel="stylesheet" href="/assets/css/Team/challenge.css">
+    <link rel="stylesheet" href="/assets/css/base.css" />
+    <link rel="stylesheet" href="/assets/css/Team/show-case.css" />
+    <link rel="stylesheet" href="/assets/css/Team/team-hero.css" />
+    <link rel="stylesheet" href="/assets/css/Team/team-marquee.css" />
+    <link rel="stylesheet" href="/assets/css/Team/hire-section.css" />
+    <link rel="stylesheet" href="/assets/css/Team/showcase.css" />
+    <link rel="stylesheet" href="/assets/css/Team/challenge.css" />
+    <link rel="stylesheet" href="/assets/css/Team/hire-modal.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <aside class="sticky-aside">
             <nav class="side-nav">
                 <ul class="nav-list">
-                    <li class="nav-list-items ">
+                    <li class="nav-list-items">
                         <a href="#" class="nav-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="44" class="head-ul-logo"
                                 viewBox="0 0 45 44" fill="none">
@@ -96,9 +97,7 @@
                                     <path d="M31.6667 33V31.1666H28V33H31.6667Z" fill="white" />
                                 </g>
                             </svg>
-                            <p class="sidenav-title">
-                                Hire your own Team
-                            </p>
+                            <p class="sidenav-title">Hire your own Team</p>
                         </a>
                     </li>
                     <li class="nav-list-items">
@@ -130,7 +129,7 @@
                             <p class="hidden lg:block xl:block">Support</p>
                         </a>
                     </li>
-                    <li class="nav-list-items ">
+                    <li class="nav-list-items">
                         <a href="#" class="nav-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="44" class="head-ul-logo"
                                 viewBox="0 0 45 44" fill="none">
@@ -159,7 +158,7 @@
                             <p class="hidden lg:block xl:block">journal</p>
                         </a>
                     </li>
-                    <li class="nav-list-items ">
+                    <li class="nav-list-items">
                         <a href="#" class="nav-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="44" class="head-ul-logo"
                                 viewBox="0 0 45 44" fill="none">
@@ -193,11 +192,9 @@
                             <p class="hidden lg:block xl:block">About</p>
                         </a>
                     </li>
-
                 </ul>
             </nav>
         </aside>
-
 
         <main class="main-section">
             <header class="head">
@@ -285,25 +282,19 @@
                     </a>
                     <ul class="header-text">
                         <li>
-                            <a href="#" class="header-text-link ">
-                                Design Task
-                            </a>
+                            <a href="#" class="header-text-link"> Design Task </a>
                         </li>
                         <li>
-                            <a href="#" class="header-text-link ">
-                                Development Task
-                            </a>
+                            <a href="#" class="header-text-link"> Development Task </a>
                         </li>
                         <li>
-                            <a href="#" class="header-text-link ">
-                                Marketing Task
-                            </a>
+                            <a href="#" class="header-text-link"> Marketing Task </a>
                         </li>
                     </ul>
                     <ul class="header-logo-list">
                         <li>
                             <a href="#" class=" ">
-                                <svg width="45" height="44" class="head-ul-logo " viewBox="0 0 45 44" fill="none"
+                                <svg width="45" height="44" class="head-ul-logo" viewBox="0 0 45 44" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M15.1148 12.8333H13.2815V11L15.1148 11V12.8333Z" fill="white" />
                                     <path d="M13.2815 14.6666H11.4481V12.8333L13.2815 12.8333V14.6666Z" fill="white" />
@@ -326,7 +317,7 @@
                         </li>
                         <li>
                             <a href="#" class=" ">
-                                <svg width="44" height="44" class="head-ul-logo " viewBox="0 0 44 44" fill="none"
+                                <svg width="44" height="44" class="head-ul-logo" viewBox="0 0 44 44" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M11 27.5H12.8334V29.3333H11V27.5Z" fill="white" />
                                     <path d="M11 27.5H12.8334V29.3333H11V27.5Z" fill="white" />
@@ -344,7 +335,7 @@
                         </li>
                         <li class="hidden-button">
                             <a href="#" class=" ">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="head-ul-logo " width="45" height="44"
+                                <svg xmlns="http://www.w3.org/2000/svg" class="head-ul-logo" width="45" height="44"
                                     viewBox="0 0 45 44" fill="none">
                                     <path d="M19.7108 21.3889V19.5556H12.3775L12.3775 21.3889H19.7108Z" fill="white" />
                                     <path d="M12.3775 12.2222L10.5442 12.2222L10.5442 19.5556H12.3775V12.2222Z"
@@ -369,16 +360,19 @@
                             </a>
                         </li>
                         <li class="block-button">
-                            <button class="quote-btn ">
-                                <p class="quote ">GET A QUOTE</p>
+                            <button class="quote-btn">
+                                <p class="quote">GET A QUOTE</p>
                             </button>
                         </li>
-
                     </ul>
                 </div>
             </header>
-
-            <section class="team-hero-section ">
+            <dialog>
+                <button autofocus>Close</button>
+                <p>This modal dialog has a groovy backdrop!</p>
+            </dialog>
+            <button>Show the dialog</button>
+            <!-- <section class="team-hero-section ">
                 <div class="team-hero-main ">
                     <div class="team-video-div ">
                         <img src="/assets/images/test-video.png" alt="">
@@ -390,15 +384,15 @@
                         </h3>
                     </span>
                 </div>
-            </section>
+            </section> -->
 
-            <section class="team-marquee-section">
+            <!-- <section class="team-marquee-section">
                 <div class="team-marquee-main">
                     <h3>Work->Dream</h3>
                 </div>
-            </section>
+            </section> -->
 
-            <section class="hire-section">
+            <!-- <section class="hire-section">
                 <div class="hire-main-div">
                     <div class="hire-grid  designer">
                         <h6 class="">Hire Designer</h6>
@@ -410,9 +404,9 @@
                         <h6 class="">Hire Designer</h6>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
-            <section class="task-showcase-section">
+            <!-- <section class="task-showcase-section">
                 <div class="main-task-showcase">
                     <div class="showcase-btn-bar">
                         <h4 class="">Task Showcase</h4>
@@ -432,7 +426,7 @@
                             <div class="slider-box-content">
                                 <div class="">
                                     <h6>Focal Banner</h6>
-                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                    <p>Pharetra convallis posuere morbi leo urna molestie.
                                         Viverra suspendisse potenti nullam ac tortor vitae.
                                     </p>
                                 </div>
@@ -446,7 +440,7 @@
                             <div class="slider-box-content">
                                 <div class="">
                                     <h6>Focal Banner</h6>
-                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                    <p>Pharetra convallis posuere morbi leo urna molestie.
                                         Viverra suspendisse potenti nullam ac tortor vitae.
                                     </p>
                                 </div>
@@ -460,7 +454,7 @@
                             <div class="slider-box-content">
                                 <div class="">
                                     <h6>Focal Banner</h6>
-                                    <p>Pharetra convallis posuere morbi leo urna molestie. 
+                                    <p>Pharetra convallis posuere morbi leo urna molestie.
                                         Viverra suspendisse potenti nullam ac tortor vitae.
                                     </p>
                                 </div>
@@ -469,23 +463,86 @@
                                 </button>
                             </div>
                         </div>
-                        <!-- <span class="showcase-gradient-span showcase-right"></span>
-                        <span class="showcase-gradient-span showcase-left"></span> -->
+                    </div>
+                </div>
+            </section> -->
 
+            <!-- <section class="challenge-section">
+                <div class="main-challenge-section">
+                    <div class="challenge-video-content">
+                        <div class="challenge-video">
+                            <span class="video-icon-span">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="video-icon-svg" width="76" height="177" viewBox="0 0 76 177"
+                                    fill="none">
+                                    <path
+                                        d="M70.0856 0.671718L0.506894 93.139L38.0004 96.1878L9.52644 176.328L75.9833 77.6938L37.4308 74.9789L70.0856 0.671718Z"
+                                        fill="white" />
+                                </svg>
+                            </span>
+                            <img src="/assets/images/challenge-rectengle.png" alt="">
+                        </div>
+                        <h3 class="">Together , there’s no challenge 
+                            we cannot solve
+                        </h3>
                     </div>
 
-
-
+                    <div class="challenge-banner-content">
+                        <div class="challenge-content-grid">
+                            <div class="content-grid-cards">
+                                <h5 class="">As your strategic partner & advisor</h5>
+                                <span class=""></span>
+                                <p class="">
+                                    Pharetra convallis posuere morbi leo urna molestie. 
+                                    Viverra suspendisse potenti nullam ac tortor vitae. 
+                                    Morbi tincidunt augue interdum velit euismod in pellentesque massa. 
+                                    Eu nisl nunc mi ipsum faucibus vitae aliquet nec. 
+                                </p>
+                            </div>
+                            <div class="content-grid-cards">
+                                <h5 class="">As your strategic partner & advisor</h5>
+                                <span class=""></span>
+                                <p class="">
+                                    Pharetra convallis posuere morbi leo urna molestie. 
+                                    Viverra suspendisse potenti nullam ac tortor vitae. 
+                                    Morbi tincidunt augue interdum velit euismod in pellentesque massa. 
+                                    Eu nisl nunc mi ipsum faucibus vitae aliquet nec. 
+                                </p>
+                            </div>
+                            <div class="content-grid-cards">
+                                <h5 class="">As your strategic partner & advisor</h5>
+                                <span class=""></span>
+                                <p class="">
+                                    Pharetra convallis posuere morbi leo urna molestie. 
+                                    Viverra suspendisse potenti nullam ac tortor vitae. 
+                                    Morbi tincidunt augue interdum velit euismod in pellentesque massa. 
+                                    Eu nisl nunc mi ipsum faucibus vitae aliquet nec. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="challenge-banner">
+                            <img src="/assets/images/ch-banner-section.png" alt="">
+                        </div>
+                    </div>
                 </div>
-            </section>
-
-            <section class="challenge-section">
-                <div class="main-challenge-section">
-                    
-                </div>
-            </section>
+            </section> -->
         </main>
     </div>
+
+    <script>
+        const dialog = document.querySelector("dialog");
+        const showButton = document.querySelector("dialog + button");
+        const closeButton = document.querySelector("dialog button");
+
+        // "Show the dialog" button opens the dialog modally
+        showButton.addEventListener("click", () => {
+            dialog.showModal();
+        });
+
+        // "Close" button closes the dialog
+        closeButton.addEventListener("click", () => {
+            dialog.close();
+        });
+    </script>
 </body>
 
 </html>
