journal page updated

--- a/pages/journal-page.html
+++ b/pages/journal-page.html
@@ -360,6 +360,30 @@
                 </div>
             </header>
 
+            <section class="journal-banner-section">
+                <div class="main-banner">
+                    <div class="banner-header">
+                        <h4 class="">
+                            Shopify Dev and design journal
+                        </h4>
+                        <p class="">
+                            All Shopify and development related Journal here
+                        </p>
+                    </div>
+                    <div class="journal-banner">
+                        <div class="banner-img">
+                            <img src="/assets/images/journal-banner-img.jpg" alt="">
+                        </div>
+                        <div class="banner-content-box">
+                            <div class="banner-content">
+                                <p class="">12 Dec, 2023</p>
+                                <h5 class="">Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Mi in nulla posuere ...</h5>
+                                <button class="content-btn">view journal</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             
         </main>
     </div>
